[tool.poetry]
name = "agent-routine"
version = "0.1.0"
description = ""
authors = ["johnsonafool <johnsonafool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.31.0"
pandas = "^2.1.2"
networkx = "^3.2.1"
osmnx = "^1.7.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
